EngineCore/include/EngineAPI.h

	/* ── opaque handle ─────────────────────────────────────────── */
	typedef void* EngineContextHandle;
	/* ── entity handle ─────────────────────────────────────────── */
	typedef struct EntityId { uint32_t id; } EntityId;
	/// Standard render layers - use custom values between these for fine control
	typedef enum {
		RENDER_LAYER_BACKGROUND = -1000,  ///< Clear operations, skybox  
		RENDER_LAYER_TERRAIN = 0,      ///< Ground tiles, background elements
		RENDER_LAYER_ENTITIES = 100,    ///< Game objects, sprites, characters
		RENDER_LAYER_EFFECTS = 200,    ///< Particles, visual effects  
		RENDER_LAYER_UI = 1000,   ///< User interface elements
		RENDER_LAYER_DEBUG = 2000,   ///< Debug overlays, gizmos
		RENDER_LAYER_POST_PROCESS = 3000   ///< Screen effects, filters
	} RenderLayer;
	/// Frame rendering statistics
	typedef struct {
		float frameTime;
		float renderTime;
		float updateTime;
		int drawCalls;
		int triangles;
		int entities;
		long memoryUsed;
	} FrameStats;
	//=============================================================================
	// RENDER PIPELINE API
	//=============================================================================

	/// Submit a sprite for rendering at the specified layer and order
	ENGINE_API void Render_SubmitSprite(
		EngineContextHandle ctx,
		uint32_t textureID,
		float posX, float posY,        ///< World position (center)
		float sizeX, float sizeY,      ///< World size
		float rotation,                ///< Rotation in radians
		float colorR, float colorG, float colorB,  ///< Tint color
		float uvOffsetX, float uvOffsetY,          ///< UV offset
		float uvSizeX, float uvSizeY,              ///< UV size
		int layer,                     ///< Render layer (use RenderLayer enum values)
		int order                      ///< Order within layer (lower = earlier)
	);
	/// Submit a custom rendering callback at the specified layer
	ENGINE_API void Render_SubmitCustom(
		EngineContextHandle ctx,
		void (*callback)(void* userData),  ///< Custom render function
		void* userData,                    ///< User data passed to callback
		int layer,                         ///< Render layer
		int order                          ///< Order within layer
	);
	ENGINE_API int GetComponentField(EngineContextHandle ctx, EntityId e, const char* c, const char* f, void* out, int size);
	ENGINE_API int SetComponentField(EngineContextHandle ctx, EntityId e, const char* c, const char* f, const void* data, int size);
	ENGINE_API void Engine_FreeString(char* str);
	//=============================================================================
	// IMGUI INTEGRATION API
	//=============================================================================

	ENGINE_API int ImGui_Initialize(EngineContextHandle ctx);
	ENGINE_API void ImGui_Shutdown(EngineContextHandle ctx);
	ENGINE_API int ImGui_ProcessEvent(EngineContextHandle ctx, void* sdlEvent);
	ENGINE_API void ImGui_NewFrame(EngineContextHandle ctx);
	ENGINE_API void ImGui_Render(EngineContextHandle ctx);
	ENGINE_API int ImGui_WantCaptureMouse(EngineContextHandle ctx);
	ENGINE_API int ImGui_WantCaptureKeyboard(EngineContextHandle ctx);
	ENGINE_API void ImGui_SetDisplaySize(EngineContextHandle ctx, float width, float height);
	ENGINE_API void ImGui_SetDockingEnabled(int enabled);
	ENGINE_API void* ImGui_GetFontAwesome();
	/// Initialize engine in editor mode with specific settings
	ENGINE_API int Engine_InitializeEditor(EngineContextHandle ctx, int width, int height, int flags);
	/// Set viewport size for embedded rendering
	ENGINE_API void Engine_SetViewportSize(EngineContextHandle ctx, int width, int height);
	/// Get current viewport size
	ENGINE_API void Engine_GetViewportSize(EngineContextHandle ctx, int* outWidth, int* outHeight);
	/// Enable/disable editor-specific rendering features
	ENGINE_API void Engine_SetEditorRenderFlags(EngineContextHandle ctx, int flags);
	/// Get frame statistics
	ENGINE_API void Engine_GetFrameStats(EngineContextHandle ctx, FrameStats* outStats);
	//=============================================================================
	// ENTITY PICKING AND SELECTION
	//=============================================================================

	/// Pick entity at screen coordinates
	ENGINE_API EntityId Engine_PickEntity(EngineContextHandle ctx, int screenX, int screenY);
	/// Pick multiple entities in a rectangular region
	ENGINE_API int Engine_PickEntitiesInRect(EngineContextHandle ctx, int x1, int y1, int x2, int y2,
		uint32_t* outEntities, int maxEntities);
	/// Get entity bounding box in screen space
	ENGINE_API int Engine_GetEntityScreenBounds(EngineContextHandle ctx, EntityId entity,
		float* outMinX, float* outMinY, float* outMaxX, float* outMaxY);
	/// Get entity bounding box in world space
	ENGINE_API int Engine_GetEntityWorldBounds(EngineContextHandle ctx, EntityId entity,
		float* outMinX, float* outMinY, float* outMaxX, float* outMaxY);
	//=============================================================================
	// CAMERA AND VIEWPORT CONTROLS
	//=============================================================================

	/// Set camera zoom level
	ENGINE_API void Engine_SetCameraZoom(EngineContextHandle ctx, float zoom);
	/// Get current camera zoom level
	ENGINE_API float Engine_GetCameraZoom(EngineContextHandle ctx);
	/// Convert screen coordinates to world coordinates
	ENGINE_API void Engine_ScreenToWorld(EngineContextHandle ctx, int screenX, int screenY,
		float* outWorldX, float* outWorldY);
	/// Convert world coordinates to screen coordinates
	ENGINE_API void Engine_WorldToScreen(EngineContextHandle ctx, float worldX, float worldY,
		int* outScreenX, int* outScreenY);
	/// Get camera view matrix
	ENGINE_API void Engine_GetCameraViewMatrix(EngineContextHandle ctx, float* outMatrix);
	/// Get camera projection matrix
	ENGINE_API void Engine_GetCameraProjectionMatrix(EngineContextHandle ctx, float* outMatrix);
	//=============================================================================
	// GRID AND GIZMO RENDERING
	//=============================================================================

	/// Enable/disable grid rendering
	ENGINE_API void Engine_SetGridVisible(EngineContextHandle ctx, int visible);
	/// Set grid properties
	ENGINE_API void Engine_SetGridProperties(EngineContextHandle ctx, float size, int subdivisions,
		float colorR, float colorG, float colorB, float alpha);
	/// Render selection outline around entity
	ENGINE_API void Engine_RenderSelectionOutline(EngineContextHandle ctx, EntityId entity,
		float colorR, float colorG, float colorB, float width);
	/// Render transformation gizmo at position
	ENGINE_API void Engine_RenderTransformGizmo(EngineContextHandle ctx, float worldX, float worldY,
		float scale, int gizmoType);
	//=============================================================================
	// DEBUG AND VISUALIZATION
	//=============================================================================

	/// Enable/disable debug rendering
	ENGINE_API void Engine_SetDebugRenderEnabled(EngineContextHandle ctx, int enabled);
	/// Set debug render flags
	ENGINE_API void Engine_SetDebugRenderFlags(EngineContextHandle ctx, int flags);
	/// Draw debug line in world space
	ENGINE_API void Engine_DrawDebugLine(EngineContextHandle ctx, float x1, float y1, float x2, float y2,
		float colorR, float colorG, float colorB, float width);
	/// Draw debug circle in world space
	ENGINE_API void Engine_DrawDebugCircle(EngineContextHandle ctx, float centerX, float centerY, float radius,
		float colorR, float colorG, float colorB, int segments);
	ENGINE_API void Engine_RunInContext(void (*fn)(void*), void* user);