CSharp/ScriptHost/Interop/EngineInterop.cs


        /// <summary>Submit a colored rectangle</summary>
        public static void SubmitColoredRect(IntPtr ctx, float x, float y, float width, float height,
                                           float r, float g, float b, RenderLayer layer = RenderLayer.UI,
                                           int order = 0)
        {
            Render_SubmitSprite(ctx, 0, x, y, width, height, 0f, r, g, b, 0f, 0f, 1f, 1f,
                               (int)layer, order);
        }

        /// <summary>Helper to get component field as typed value</summary>
        public static T GetComponentField<T>(IntPtr ctx, EntityId entity, string component, string field) where T : struct
        {
            int size = Marshal.SizeOf<T>();
            IntPtr buffer = Marshal.AllocHGlobal(size);
            try
            {
                int result = GetComponentField(ctx, entity, component, field, buffer, size);
                if (result > 0)
                {
                    return Marshal.PtrToStructure<T>(buffer);
                }
                return default(T);
            }
            finally
            {
                Marshal.FreeHGlobal(buffer);
            }
        }

        /// <summary>Helper to set component field from typed value</summary>
        public static bool SetComponentField<T>(IntPtr ctx, EntityId entity, string component, string field, T value) where T : struct
        {
            int size = Marshal.SizeOf<T>();
            IntPtr buffer = Marshal.AllocHGlobal(size);
            try
            {
                Marshal.StructureToPtr(value, buffer, false);
                int result = SetComponentField(ctx, entity, component, field, buffer, size);
                return result == 0;
            }
            finally
            {
                Marshal.FreeHGlobal(buffer);
            }
        }

        /// <summary>Helper to get string from native function</summary>
        public static string GetStringFromBuffer(byte[] buffer, int length)
        {
            if (buffer == null || length <= 0) return string.Empty;
            return Encoding.UTF8.GetString(buffer, 0, length);
        }

        /// <summary>Helper to marshal string to path finding result</summary>
        public static string GetPathfindingResult(IntPtr strPtr)
        {
            if (strPtr == IntPtr.Zero) return string.Empty;
            try
            {
                return Marshal.PtrToStringUTF8(strPtr) ?? string.Empty;
            }
            finally
            {
                Engine_FreeString(strPtr);
            }
        }

        #endregion

        #region Imgui

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ImGui_Initialize(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_Shutdown(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ImGui_ProcessEvent(IntPtr ctx, IntPtr sdlEvent);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_NewFrame(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_Render(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ImGui_WantCaptureMouse(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ImGui_WantCaptureKeyboard(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_SetDisplaySize(IntPtr ctx, float width, float height);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_SetDockingEnabled(int enabled);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ImGui_GetFontAwesome();

        #endregion

        #region Editor-Specific Engine Functions

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int EngineInitEditor(IntPtr context, int argc, string[] argv);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int EngineIterateEditor(IntPtr context);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int EngineInitRendering(IntPtr context, int width, int height);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void EngineRenderFrame(IntPtr context);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void EngineSetEditorCamera(IntPtr context, float x, float y, float zoom, float width, float height);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int EngineCanRender(IntPtr context);

        /// <summary>
        /// Initialize engine in editor mode with specific settings
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Engine_InitializeEditor(IntPtr ctx, int width, int height, int flags);

        /// <summary>
        /// Set viewport size for embedded rendering
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_SetViewportSize(IntPtr ctx, int width, int height);

        /// <summary>
        /// Get current viewport size
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_GetViewportSize(IntPtr ctx, out int width, out int height);

        /// <summary>
        /// Enable/disable editor-specific rendering features
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_SetEditorRenderFlags(IntPtr ctx, int flags);

        /// <summary>
        /// Get frame statistics
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_GetFrameStats(IntPtr ctx, out FrameStats stats);

        #endregion

        #region Entity Picking and Selection

        /// <summary>
        /// Pick entity at screen coordinates
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern EntityId Engine_PickEntity(IntPtr ctx, int screenX, int screenY);

        /// <summary>
        /// Pick multiple entities in a rectangular region
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Engine_PickEntitiesInRect(IntPtr ctx, int x1, int y1, int x2, int y2,
            [Out] uint[] outEntities, int maxEntities);

        /// <summary>
        /// Get entity bounding box in screen space
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Engine_GetEntityScreenBounds(IntPtr ctx, EntityId entity,
            out float minX, out float minY, out float maxX, out float maxY);

        /// <summary>
        /// Get entity bounding box in world space
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Engine_GetEntityWorldBounds(IntPtr ctx, EntityId entity,
            out float minX, out float minY, out float maxX, out float maxY);

        #endregion

        #region Camera and Viewport Controls

        /// <summary>
        /// Set camera zoom level
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_SetCameraZoom(IntPtr ctx, float zoom);

        /// <summary>
        /// Get current camera zoom level
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern float Engine_GetCameraZoom(IntPtr ctx);

        /// <summary>
        /// Convert screen coordinates to world coordinates
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_ScreenToWorld(IntPtr ctx, int screenX, int screenY,
            out float worldX, out float worldY);

        /// <summary>
        /// Convert world coordinates to screen coordinates
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_WorldToScreen(IntPtr ctx, float worldX, float worldY,
            out int screenX, out int screenY);

        /// <summary>
        /// Get camera view matrix
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_GetCameraViewMatrix(IntPtr ctx, [Out] float[] matrix);

        /// <summary>
        /// Get camera projection matrix
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_GetCameraProjectionMatrix(IntPtr ctx, [Out] float[] matrix);

        #endregion

        #region Grid and Gizmo Rendering

        /// <summary>
        /// Enable/disable grid rendering
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_SetGridVisible(IntPtr ctx, int visible);

        /// <summary>
        /// Set grid properties
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_SetGridProperties(IntPtr ctx, float size, int subdivisions,
            float colorR, float colorG, float colorB, float alpha);

        /// <summary>
        /// Render selection outline around entity
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_RenderSelectionOutline(IntPtr ctx, EntityId entity,
            float colorR, float colorG, float colorB, float width);

        /// <summary>
        /// Render transformation gizmo at position
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_RenderTransformGizmo(IntPtr ctx, float worldX, float worldY,
            float scale, int gizmoType);

        #endregion

        #region Debug and Visualization

        /// <summary>
        /// Enable/disable debug rendering
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_SetDebugRenderEnabled(IntPtr ctx, int enabled);

        /// <summary>
        /// Set debug render flags
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_SetDebugRenderFlags(IntPtr ctx, int flags);

        /// <summary>
        /// Draw debug line in world space
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_DrawDebugLine(IntPtr ctx, float x1, float y1, float x2, float y2,
            float colorR, float colorG, float colorB, float width);

        /// <summary>
        /// Draw debug circle in world space
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_DrawDebugCircle(IntPtr ctx, float centerX, float centerY, float radius,
            float colorR, float colorG, float colorB, int segments);
